<?xml version="1.0"?>
<package format="2">
  <name>repub_cmd_vel</name>
  <version>0.0.0</version>
  <description>Republish cmd_vel as stamped Twist </description>

  <maintainer email="gomezro@todo.todo">gomezro</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
    <!-- <depend>sensor_msgs</depend> -->
    <!-- <depend>std_msgs</depend> -->
    <depend>geometry_msgs</depend>
    <!-- <depend>tf2</depend> -->
    <!-- <depend>tf2_ros</depend> -->
    <!-- <build_depend>tf2_geometry_msgs</build_depend> -->
    <!-- <build_depend>tf2_sensor_msgs</build_depend> -->



</package>
